--- a/package.json
+++ b/package.json
@@ -10,11 +10,18 @@
   },
   "license": "MIT",
   "dependencies": {
+    "@radix-ui/react-slot": "^1.1.0",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.1.1",
+    "lucide-react": "^0.460.0",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
-    "tailwindcss": "^3.4.1"
+    "tailwind-merge": "^2.5.4",
+    "tailwindcss": "^3.4.1",
+    "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
+    "@types/chrome": "^0.0.283",
     "@types/react": "^18.3.5",
     "@types/react-dom": "^18.3.0",
     "extension": "latest",
