--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,8 +15,14 @@
     "target": "esnext",
     "verbatimModuleSyntax": true,
     "useDefineForClassFields": true,
-    "skipLibCheck": true
+    "skipLibCheck": true,
+    "types": ["chrome"],
+    "baseUrl": ".",
+    "paths": {
+      "@/*": ["./src/*"]
+    }
   },
+
   "include": ["./"],
   "exclude": ["node_modules", "dist"]
 }
